--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div id="MP2SECbutton"><span id="MP2SECbuttonText">Next</span> </div>
         </div>
         <div id="MP2THR" class="hide">
-            <h1 id="MP2THRH1"></h1>
+            
         </div>
     </div>
-<script src="/js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
