--- a/index.html
+++ b/index.html
@@ -7,25 +7,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mentor Program 2.0</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet"> 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <div id="MP2FST" class="">
-            <div id="bubble"> </div>
-            <h1 id="h1FST">Hello chat</h1>
+    <div class="container displayFlex">
+        <div id="MP2FST" class="displayFlex">
+            <div id="bubble"><img src="./assets/bubble.png" alt=""> </div>
+            <h1 id="h1FST"><b>Hello</b>  chat</h1>
+
             <div id="buttonCreatAcc">
                 <button id="FSTbutton" onclick="fist()">Create account</button>
             </div>
         </div>
 
-        <div id="MP2SEC" class="hide" >
+        <div id="MP2SEC" class="hide"  >
             <h1 id="HAU">Now, tell who you are</h1>
-            <input type="text" name="wyName" id="WYName" placeholder="type" onkeyup="valid()">
+            <input type="text" name="wyName" id="WYName" placeholder="type" autocomplete="off" " > <!--onkeyup="valid()" onkeypress=" validEnt(event) onclick="nextPage(event)"-->
             <div id="MP2SECbutton"><span id="MP2SECbuttonText">Next</span> </div>
         </div>
         <div id="MP2THR" class="hide">
-            
+         
         </div>
     </div>
 <script src="js/app.js"></script>
